--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
     "@mui/styled-engine-sc": "^6.3.0",
+    "@stytch/react": "^19.1.1",
+    "@stytch/vanilla-js": "^5.10.1",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "styled-components": "^6.1.13",
