--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.1",
     "styled-components": "^6.1.13",
     "uniao-marcial": "file:"
   },
