--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@stytch/react": "^19.1.1",
     "@stytch/vanilla-js": "^5.10.1",
     "firebase": "^11.1.0",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.1",
     "styled-components": "^6.1.13",
-    "uniao-marcial": "file:"
+    "uniao-marcial": "file:",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
